Changed padding and width of main column to try to avoid unwanted wrapping effects.

--- a/trunk/legomindstorm/web/rover_v_3_0/template/default/style/main.css
+++ b/trunk/legomindstorm/web/rover_v_3_0/template/default/style/main.css
@@ -28,13 +28,15 @@ body {
 	padding: 1em;
 	padding-top: 0;
 	width: 10%;
+	height: 12em;
 	float: left;
 }
 
 #center_col {
 	margin: 2em;
-	margin-left: 11%;
+	margin-left: 15%;
 	padding: 0em;
+	padding-left: 1em;
 	width: 60%;
 }
 
